Application basique terminée

--- a/ng-cli-base.cli/src/styles.scss
+++ b/ng-cli-base.cli/src/styles.scss
@@ -1,12 +1,18 @@
 ﻿/* You can add global styles to this file, and also import other style files */
+
+/*
+  Materialize Sass
+*/
+//Surcharge du chemin vers les fonts
 $roboto-font-path: "../node_modules/materialize-css/dist/fonts/roboto/" !default;
 
 //Commencer par l'import des couleurs
 @import "../node_modules/materialize-css/sass/components/color";
 
-//Surcharger les couleurs globales
-$primary-color: color("orange", "lighten-2") !default;
-$secondary-color: color("red", "lighten-1") !default;
+//Surcharger les couleurs globales: c.f. ../node_modules/materialize-css/sass/components/_variables.scss
+$primary-color: color("amber", "lighten-2") !default;
+$secondary-color: color("orange", "lighten-1") !default;
 
 //Importer le framework à la fin
 @import "../node_modules/materialize-css/sass/materialize";
+
